<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.naveenkumark.addrdbexception.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:text="Sign Up"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:id="@+id/signup"
        app:layout_constraintLeft_toLeftOf="@+id/content_main"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/content_main"
        android:layout_marginTop="112dp"/>

    <Button
        android:text="Sign in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        app:layout_constraintLeft_toRightOf="@+id/signup"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toRightOf="@+id/content_main"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/signup"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="Email"
        app:layout_constraintLeft_toLeftOf="@+id/content_main"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        android:layout_marginTop="32dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="Password"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginTop="32dp"/>

</android.support.constraint.ConstraintLayout>
